Added chunk to read in GSS data

--- a/proj_work.Rmd
+++ b/proj_work.Rmd
@@ -7,7 +7,14 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(readxl)
 ```
+
+```{r}
+GSSdata <- read_excel("~/243project/college_major_set_1/GSS.xls")
+```
+
 
 ## R Markdown
 
