converted to csv

--- a/proj_work.Rmd
+++ b/proj_work.Rmd
@@ -11,28 +11,8 @@ library(tidyverse)
 ```
 
 ```{r}
-library(readxl)
-GSS3 <- read_excel("~/243project/college_major_set_1/GSS3.xlsx")
-View(GSS3)
+# Import the data
+GSS3 <- read.csv("https://raw.githubusercontent.com/ejarce/243project/master/college_major_set_1/GSS3.csv")
 ```
 
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
