--- a/proj_work.Rmd
+++ b/proj_work.Rmd
@@ -26,10 +26,10 @@ prestige <- prestige %>%
   dplyr::select(1,2,4)
 GSS3 <- GSS3[-4513,]
 GSS3 <- distinct(GSS3)
-GSS3$IDnum <- as.integer(GSS3$IDnum)
-GSS3$GSSyear <- as.integer(GSS3$GSSyear)
-prestige$IDnum <- as.integer(prestige$IDnum)
-prestige$GSSyear <- as.integer(prestige$GSSyear)
+GSS3$IDnum <- as.numeric(GSS3$IDnum)
+GSS3$GSSyear <- as.numeric(GSS3$GSSyear)
+prestige$IDnum <- as.numeric(prestige$IDnum)
+prestige$GSSyear <- as.numeric(prestige$GSSyear)
 GSS3$pctColleagueWdegree <- as.numeric(GSS3$pctColleagueWdegree)
 GSS3$hrsLastWk <- as.numeric(GSS3$hrsLastWk)
 GSS3$Age <- as.numeric(GSS3$Age)
@@ -110,6 +110,11 @@ GSS6$STEM <- as.factor(GSS6$STEM)
 summary(GSS6$STEM)
 ```
 
+```{r}
+library(taRifx)
+GSS6 <- japply(GSS6, which(sapply(GSS6, class)=="int"), as.numeric )
+
+```
 
 
 
@@ -127,26 +132,25 @@ train <- GSS6[samp,]
 test <- GSS6[-samp,]
 ```
 
-### LDA
-
-```{r}
-library(MASS)
-LDA1 <- lda(DegreeField ~ .-IDnum-GSSyear, data = GSS3)
-```
-
-
-### QDA
-
-```{r}
-QDA1 <- qda(STEM ~ .-IDnum-GSSyear-X1-DegreeField, data = train)
-```
 
 ### SVM
 ```{r}
 library(e1071)
-SVM <- svm(STEM ~ .-IDnum-GSSyear-X1-DegreeField, data = train)
+SVM <- svm(STEM ~ .-IDnum-GSSyear-X1-DegreeField-collStudEnroll-racism-ageism-baEarnRate-prestige, data = train)
 summary(SVM)
-ypred <- predict(SVM, test)
 
-table(predict = ypred, truth = test$STEM)
 ```
+
+### Logistic Regression
+
+```{r}
+library(caTools)
+
+train2 <-drop_na(train)
+glm1 <- glm(STEM ~ .-X1-GSSyear-DegreeField-collStudEnroll-IndusCode-racism-ageism-prestige-baEarnRate, data = train, family = binomial)
+summary(glm1)
+plot(glm1)
+
+
+```
+
