--- a/proj_work.Rmd
+++ b/proj_work.Rmd
@@ -168,11 +168,11 @@ test <- GSS8[-samp,]
 ### SVM
 ```{r}
 library(e1071)
-SVM <- svm(STEM ~ ., data = GSS8)
-tune.out <- tune(svm, STEM~., data = GSS8, kernel = "radial", ranges = list(cost=c(0.1,1,10,100,1000),gamma=c(0.5,1,2,3,4)))
+set.seed(7)
+SVM <- svm(STEM ~ ., data = train)
+tune.out <- tune(svm, STEM~., data = train, kernel = "radial", ranges = list(cost=c(0.1,1,10,100,1000),gamma=c(0.5,1,2,3,4)))
 summary(tune.out)
-summary(SVM)
-
+table(true=test$STEM, pred =predict(tune.out$best.model,newdata=test))
 ```
 
 ### Logistic Regression
